[gd_scene load_steps=8 format=2]

[ext_resource path="res://Gui/GameOver.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/LevelTemplate.gd" type="Script" id=3]
[ext_resource path="res://Gui/PlayGui.tscn" type="PackedScene" id=4]
[ext_resource path="res://LevelBits/RoadBlock.tscn" type="PackedScene" id=5]
[ext_resource path="res://default_env.tres" type="Environment" id=6]
[ext_resource path="res://Gui/Theme.tres" type="Theme" id=7]

[node name="LevelTemplate" type="Spatial" groups=[
"game",
]]
script = ExtResource( 3 )

[node name="Level" type="Spatial" parent="."]

[node name="RoadBlocks" type="Spatial" parent="Level"]

[node name="RoadBlock0" parent="Level/RoadBlocks" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10 )

[node name="RoadBlock1" parent="Level/RoadBlocks" instance=ExtResource( 5 )]

[node name="Obstacles" type="Spatial" parent="Level"]

[node name="NextPosition" type="Position3D" parent="Level"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )

[node name="Env" type="Node" parent="."]

[node name="DirectionalLight" type="DirectionalLight" parent="Env"]
transform = Transform( 0.707107, -0.183013, 0.683013, 0, 0.965926, 0.258819, -0.707107, -0.183013, 0.683013, 0, 4.3759, 0.57997 )
light_energy = 5.0

[node name="Camera" type="Camera" parent="Env"]
transform = Transform( -1, 2.41703e-08, -8.40151e-08, -8.5583e-09, 0.929339, 0.369228, 8.70028e-08, 0.369228, -0.929339, 0, 1.89714, -1.62311 )
environment = ExtResource( 6 )
current = true
fov = 55.2

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0 )

[node name="GameOver" parent="." instance=ExtResource( 1 )]
visible = false

[node name="Gui" type="CanvasLayer" parent="."]

[node name="PlayGui" parent="Gui" instance=ExtResource( 4 )]

[node name="DebugConsole" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="DebugConsole"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DebugConsole/CenterContainer"]
margin_left = 512.0
margin_top = 283.0
margin_right = 512.0
margin_bottom = 316.0
grow_horizontal = 2
theme = ExtResource( 7 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
